--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,7 +17,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: orangered;
+    background-color: rgb(254, 151, 114);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,12 +33,55 @@ body {
 }
 
 .btn {
-    background-color: black;
     height: 30px;
-    color: white;
     width: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 2em;
+    display: flex;
+    gap: 5px;
+    font-size: 18px;
+}
+
+.btn img {
+    height: 25px;
+    width: 25px;
+}
+
+
+/*Home Page*/
+
+.containerHome {
+    margin-top: 40px;
+    background-color: rgb(216, 78, 3);
+    width: 70%;
+    height: 100vh;
+    border-top-left-radius: 16em;
+    border-top-right-radius: 16em;
+}
+
+.containerHome img {
+    height: 120%;
+    width: 100%;
+}
+
+
+/*Menu Page*/
+
+.containerMenu {
+    margin-top: 25px;
+    background-color: aliceblue;
+    width: 80%;
+    height: 80%;
+}
+
+
+/*Contact page*/
+
+.containerContact {
+    margin-top: 25px;
+    background-color: green;
+    width: 80%;
+    height: 80%;
 }
